--- a/style.css
+++ b/style.css
@@ -122,3 +122,57 @@ h2 {
 main {
   padding: 20px;
 }
+
+.container {
+  max-width: 1000px;
+  margin: 20px auto;
+  padding: 20px;
+  text-align: justify;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  min-height: 91vh; 
+}
+
+.news-title {
+  font-size: 2em;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.news-meta {
+  color: #888;
+  font-size: 0.9em;
+  margin-bottom: 20px;
+}
+
+.news-summary {
+  font-size: 1.1em;
+  color: #555;
+  margin: 20px 0;
+  font-style: italic;
+}
+
+.news-content {
+  font-size: 1.2em;
+  line-height: 1.8;
+  margin-top: 20px;
+}
+
+.news-author {
+  font-size: 0.9em;
+  color: #666;
+  margin-top: 30px;
+}
+
+.back-link {
+  display: inline-block;
+  margin-top: 0px;
+  color: #007BFF;
+  text-decoration: none;
+  margin-left: 310px;
+}
+
+.back-link:hover {
+  text-decoration: underline;
+}
