--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 body {
-  font-family: 'Times New Roman', Times, serif, sans-serif;
+  font-family: 'Arial', sans-serif;
   line-height: 1.6;
   background-color: #f4f6f9;
   margin: 0;
   padding: 0;
+}
+
+header, main {
+  font-family: 'Arial', sans-serif; /* Ensure header and main sections also use the same font */
+}
+
+h1, h2, h3, p {
+  font-family: 'Arial', sans-serif; /* Apply the same font to headers and paragraphs */
 }
 
 header {
@@ -15,7 +23,8 @@ header {
 
 header h1 {
   margin: 0;
-  font-size: 2rem;
+  font-size: 3rem !important;
+  font-weight: bold;
 }
 
 h2 {
@@ -91,11 +100,15 @@ button:hover {
 
 .news-item h2 {
   margin: 0;
+  margin-bottom: 10px;
 }
 
 .news-item h2 a {
-  color: #333;
+  color: #34495e;
   text-decoration: none;
+  font-size: 1.2rem;
+  text-align: justify;
+  display: block;
 }
 
 .news-item h2 a:hover {
@@ -106,6 +119,9 @@ button:hover {
   font-size: 1.2rem;
   color: #34495e;
   margin-bottom: 10px;
+  font-weight: bold;
+  text-decoration: underline;
+  padding-bottom: 10px;
 }
 
 .news-item h3 a {
@@ -144,7 +160,7 @@ h2 {
 #top-right-button {
   position: absolute;
   right: 10px;
-  top: 50%;
+  top: 15px;
   transform: translateY(-50%);
   padding: 10px 10px;
   background-color: #007bff;
