--- a/style.css
+++ b/style.css
@@ -256,12 +256,14 @@ main {
   font-size: 2em;
   color: #333;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .news-meta {
   color: #888;
   font-size: 0.9em;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .news-summary {
@@ -301,4 +303,8 @@ main {
 
 .news-item a.delete-link:hover {
   color: #c0392b;
+}
+
+.news-image {
+  text-align: center;
 }
