--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
   color: white;
   padding: 20px 10px;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 header h1 {
@@ -128,9 +129,30 @@ button:hover {
 
 #news-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-  text-align: justify;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 30px; 
+  padding: 30px;
+  background-color: #ffffff; 
+  border-radius: 15px;
+  width: 100%;
+  max-width: 1500px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+/* Media query for tablet screens */
+@media (max-width: 900px) {
+  #news-list {
+    grid-template-columns: repeat(1, 1fr); /* Two columns */
+  }
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f6f9;
+  max-width: 1600px;
 }
 
 .news-item {
@@ -149,7 +171,7 @@ button:hover {
 .news-item h2 a {
   color: #34495e;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   text-align: justify;
   display: block;
 }
